--- a/template.html
+++ b/template.html
@@ -1,21 +1,10 @@
 <!DOCTYPE html>
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-CDEP7T1MEX"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-
-	gtag('config', 'G-CDEP7T1MEX');
-	</script>
-	<!---->
-
 	<link rel="stylesheet" href="./files/styles/style.css">
 	<link rel="icon" type="image/x-icon" href="./files/images/ui/9.png" />
-	<title>9EED's webiste</title>
+	<title>9EED's webiste(WIP)</title>
 	<meta charset="UTF-8" />
-	<meta name="description" content="9EED's website">
+	<meta name="description" content="9EED's profesonl personal website">
 	<meta name="author" content="9EED" />
 	<meta property="og:image" content="./files/images/9.png" />
 	<script defer src="./files/scripts/script.js"></script>
