--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<link rel="stylesheet" href="./files/styles/style.css">
 	<link rel="icon" type="image/x-icon" href="./files/images/ui/9.png" />
-	<title>9EED's webiste(WIP)</title>
+	<title>9EED's website(WIP)</title>
 	<meta charset="UTF-8" />
 	<meta name="description" content="9EED's profesonl personal website">
 	<meta name="author" content="9EED" />
@@ -35,7 +35,7 @@
 	</div>
 	
 	<div class="landing-page" id="landing-page" tabindex="1" >
-		<div class="main-title">9EED's webiste</div>
+		<div class="main-title">9EED's website</div>
 		<a tabindex="-1" href="#about-me" class="down">
 			<img src="./files/images/ui/down.png" alt="down">
 		</a>
@@ -138,7 +138,7 @@
 								9EED's website
 							</div>
 							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="./files/images/projects/9EED's-website.jpg" alt="9EED's webiste" />
+								<img class="six-celled-cell-image" src="./files/images/projects/9EED's-website.jpg" alt="9EED's website" />
 							</div>
 						</a>
 						<a tabindex="-1" href="https://9eed.github.io/super-box/" target="_blank" class="six-celled-cell">
