--- a/template.html
+++ b/template.html
@@ -50,7 +50,13 @@
 		</div>
 	</div>
 
-	<div class="gallery-page" tabindex="3" >
+	<div class="image-page" tabindex="3" >
+		<div class="image-container">
+			<img src="./files/images/image.jpg" />
+		</div>
+	</div>
+
+	<div class="gallery-page" tabindex="4" >
 		<div class="gallery-container">
 			<div class="gallery-title">gallery</div>
 			<div class="gallery">
@@ -76,7 +82,7 @@
 		</div>
 	</div>
 
-	<div class="four-celled-page" tabindex="4" >
+	<div class="four-celled-page" tabindex="5" >
 		<div class="four-celled-container">
 			<div class="four-celled-title">four celled</div>
 			<div class="four-celled">
@@ -120,7 +126,7 @@
 		</div>
 	</div>
 
-	<div class="six-celled-page" tabindex="5" >
+	<div class="six-celled-page" tabindex="6" >
 			<div class="six-celled-container">
 				<div class="six-celled">
 					<div class="six-celled-title">six celled</div>
@@ -178,8 +184,8 @@
 		</div>
 	</div>
 	
-	<footer class="footer" tabindex="6">
-		<div class="Icons8">icons by <a target="_blank" href="https://icons8.com" tabindex="-1" class="link" >Icons8 </a></div>
+	<footer class="footer" tabindex="7">
+		<div class="Icons8">icons by <a target="_blank" href="https://icons8.com" tabindex="-1" class="link" >Icons8</a></div>
 		<div>made by me <a href="https://9EED.github.io/9EED/" tabindex="-1" class="link" >9EED</a></div>
 	</footer>
 
