--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 
 	<div class="nav-bar">
 		<a class="nav-bar-item" href="./index.html#landing-page">HOME</a>
-		<a class="nav-bar-item" href="./index.html#contacts">CONTACTS</a>
 		<a class="nav-bar-item" href="./index.html#projects">PROJECTS</a>
-		<a class="nav-bar-item" href="./template.html">TEMPLATE</a>
+		<a class="nav-bar-item" href="./index.html#contacts">CONTACTS</a>
 	</div>
 
 	<div class="nav-list">
@@ -31,6 +30,7 @@
 			<a class="list-item" href="#skill-set">skill set</a>
 			<a class="list-item" href="#projects">projects</a>
 			<a class="list-item" href="#contacts">contacts</a>
+			<a class="list-item" href="#footer">footer</a>
 		</div>
 	</div>
 	
@@ -198,7 +198,7 @@
 		</div>
 	</div>
 	
-	<footer class="footer" tabindex="6">
+	<footer class="footer" id="footer" tabindex="6">
 		<div class="Icons8">icons by <a target="_blank" href="https://icons8.com" tabindex="-1" class="link" >Icons8 </a></div>
 		<div>made by me <a href="https://9EED.github.io/9EED/" tabindex="-1" class="link" >9EED</a></div>
 	</footer>
