--- a/template.html
+++ b/template.html
@@ -17,15 +17,15 @@
 
 	<div class="nav-bar">
 		<a class="nav-bar-item" href="./index.html#landing-page">HOME</a>
-		<a class="nav-bar-item" href="./index.html#contacts">CONTACTS</a>
 		<a class="nav-bar-item" href="./index.html#projects">PROJECTS</a>
-		<a class="nav-bar-item" href="./template.html">TEMPLATE</a>
+		<a class="nav-bar-item" href="./index.html#contacts">CONTACTS</a>
 	</div>
 
 	<div class="nav-list">
 		<img src="./files/images/ui/menu.png">
 		<div class="list">
 			<div class="list-title">shortcuts</div>
+			<a class="list-item" href="#">item</a>
 			<a class="list-item" href="#">item</a>
 			<a class="list-item" href="#">item</a>
 			<a class="list-item" href="#">item</a>
