--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<link rel="stylesheet" href="./files/styles/style.css">
 	<link rel="icon" type="image/x-icon" href="./files/images/ui/9.png" />
-	<title>9EED's website(WIP)</title>
+	<title>9EED's website</title>
 	<meta charset="UTF-8" />
 	<meta name="description" content="9EED's profesonl personal website">
 	<meta name="author" content="9EED" />
