--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
 								<img class="six-celled-cell-image" src="./files/images/projects/conways-game-of-life.jpg" alt="conways-game-of-life" />
 							</div>
 						</a>
-						<a tabindex="-1" href="https://9EED.github.io/chimist" target="_blank" class="six-celled-cell">
+						<a tabindex="-1" href="https://9eed.github.io/20-meter-til-dawn/" target="_blank" class="six-celled-cell">
 							<div class="six-celled-cell-title">
-								chimist
+								20MTD
 							</div>
 							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="./files/images/projects/chimist.jpg" alt="chimist" />
+								<img class="six-celled-cell-image" src="./files/images/projects/20MTD.jpg" alt="20MTD" />
 							</div>
 						</a>
 						<a tabindex="-1" href="https://9EED.github.io/turn-based" target="_blank" class="six-celled-cell">
@@ -143,7 +143,7 @@
 						</a>
 						<a tabindex="-1" href="https://9eed.github.io/super-box/" target="_blank" class="six-celled-cell">
 							<div class="six-celled-cell-title">
-								super-box (wip)
+								super-box
 							</div>
 							<div class="six-celled-cell-image-holder" >
 								<img class="six-celled-cell-image" src="./files/images/projects/super-box.PNG" alt="super-box" />
