--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<div class="paragraph-container">
 			<div class="paragraph-title">about me</div>
 			<div class="paragraph">
-				Hello I am Zeghdani Salah eddine also known as 9EED (pronunced Nined),
+				Hello I am 9EED (pronunced Nined),
 				I'm a web developer an artist and a high-school student
 				in Algeria.
 			</div>
