--- a/template.html
+++ b/template.html
@@ -19,6 +19,7 @@
 		<a class="nav-bar-item" href="./index.html#landing-page">HOME</a>
 		<a class="nav-bar-item" href="./index.html#projects">PROJECTS</a>
 		<a class="nav-bar-item" href="./index.html#contacts">CONTACTS</a>
+		<a class="nav-bar-item" id="mode-switch"><img src="./files/images/ui/sun.svg"></a>
 	</div>
 
 	<div class="nav-list">
