--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 		<div class="four-celled-container">
 			<div class="four-celled-title">contacts</div>
 			<div class="four-celled">
-				<a tabindex="-1" class="four-celled-cell" >
+				<a tabindex="-1" class="four-celled-cell" href="mailto:zeghdns@gmail.com" >
 					<div class="four-celled-cell-image">
 						<img src="./files/images/contacts/email.png" alt="email">
 					</div>
@@ -167,7 +167,7 @@
 						zeghdns@gmail.com
 					</div>
 				</a>
-				<a tabindex="-1" class="four-celled-cell"target="_blank">
+				<a tabindex="-1" class="four-celled-cell" href="https://discord.com/app" target="_blank">
 					<div class="four-celled-cell-image">
 						<img src="./files/images/contacts/discord.png" alt="discord">
 					</div>
