Fix Spelling Mistakes
They burn my eyes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="icon" type="image/x-icon" href="./files/images/ui/9.png" />
 	<title>9EED's website</title>
 	<meta charset="UTF-8" />
-	<meta name="description" content="9EED's profesonl personal website">
+	<meta name="description" content="9EED's professional personal website">
 	<meta name="author" content="9EED" />
 	<meta property="og:image" content="./files/images/9.png" />
 	<script defer src="./files/scripts/script.js"></script>
@@ -46,8 +46,8 @@
 		<div class="paragraph-container">
 			<div class="paragraph-title">about me</div>
 			<div class="paragraph">
-				Hello I am 9EED (pronunced Nined),
-				I'm a web developer an artist and a high-school student
+				Hello, I am 9EED (pronunced Nined).
+				I'm a web developer, an artist and, a high-school student
 				in Algeria.
 			</div>
 		</div>
@@ -61,7 +61,7 @@
 					<div class="four-celled-cell-image">
 						<img src="./files/images/skills/web.png">
 					</div>
-					<div class="four-celled-cell-title">Web dev</div>
+					<div class="four-celled-cell-title">Web Dev</div>
 					<div class="four-celled-cell-details">
 						designing websites using HTML CSS and JavaScript
 					</div>
@@ -70,25 +70,25 @@
 					<div class="four-celled-cell-image">
 						<img src="./files/images/skills/drawing.png">
 					</div>
-					<div class="four-celled-cell-title">drawing</div>
+					<div class="four-celled-cell-title">Drawing</div>
 					<div class="four-celled-cell-details">
-						pincle and pen drawings on paper
+						pencil and pen drawings on paper
 					</div>
 				</a>
 				<a href="./3d.html" tabindex="-1" class="four-celled-cell">
 					<div class="four-celled-cell-image">
 						<img src="./files/images/skills/3d.png">
 					</div>
-					<div class="four-celled-cell-title">3D animation</div>
+					<div class="four-celled-cell-title">3D Animation</div>
 					<div class="four-celled-cell-details">
-						3D animation and modeling using blender
+						3D animation and modeling using Blender
 					</div>
 				</a>
 				<a href="./ui.html" tabindex="-1" class="four-celled-cell">
 					<div class="four-celled-cell-image">
 						<img src="./files/images/skills/ui.png">
 					</div>
-					<div class="four-celled-cell-title">UI design</div>
+					<div class="four-celled-cell-title">UI Design</div>
 					<div class="four-celled-cell-details">
 						user interface design
 					</div>
