--- a/template.html
+++ b/template.html
@@ -8,6 +8,7 @@
 	<meta name="author" content="9EED" />
 	<meta property="og:image" content="./files/images/9.png" />
 	<script defer src="./files/scripts/script.js"></script>
+	<script defer src="./files/scripts/switch.js"></script>
 </head>
 <body>
 
