--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="author" content="9EED" />
 	<meta property="og:image" content="./files/images/9.png" />
 	<script defer src="./files/scripts/script.js"></script>
+	<script defer src="./files/scripts/switch.js"></script>
 </head>
 <body>
 
@@ -46,9 +47,7 @@
 		<div class="paragraph-container">
 			<div class="paragraph-title">about me</div>
 			<div class="paragraph">
-				Hello, I am 9EED (pronunced Nined).
-				I'm a web developer, an artist and, a high-school student
-				in Algeria.
+				Hello, I am 9EED (pronunced Nined). I'm a web developer, an artist and, a high-school student from Algeria.
 			</div>
 		</div>
 	</div>
