--- a/files/pages/template.html
+++ b/files/pages/template.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <head>
-	<link rel="stylesheet" href="./files/styles/style.css">
-	<link rel="icon" type="image/x-icon" href="./files/images/ui/9.png" />
+	<link rel="stylesheet" href="/files/styles/style.css">
+	<link rel="icon" type="image/x-icon" href="/files/images/ui/9.png" />
 	<title>9EED's website(WIP)</title>
 	<meta charset="UTF-8" />
 	<meta name="description" content="9EED's profesonl personal website">
 	<meta name="author" content="9EED" />
-	<meta property="og:image" content="./files/images/9.png" />
-	<script defer src="./files/scripts/script.js"></script>
-	<script defer src="./files/scripts/switch.js"></script>
+	<meta property="og:image" content="/files/images/9.png" />
+	<script defer src="/files/scripts/script.js"></script>
+	<script defer src="/files/scripts/switch.js"></script>
 </head>
 <body>
 
@@ -17,14 +17,14 @@
     </div>
 
 	<div class="nav-bar">
-		<a class="nav-bar-item" href="./index.html#landing-page">HOME</a>
-		<a class="nav-bar-item" href="./index.html#projects">PROJECTS</a>
-		<a class="nav-bar-item" href="./index.html#contacts">CONTACTS</a>
-		<a class="nav-bar-item" id="mode-switch"><img src="./files/images/ui/sun.svg"></a>
+		<a class="nav-bar-item" href="/index.html#landing-page">HOME</a>
+		<a class="nav-bar-item" href="/index.html#projects">PROJECTS</a>
+		<a class="nav-bar-item" href="/index.html#contacts">CONTACTS</a>
+		<a class="nav-bar-item" id="mode-switch"><img src="/files/images/ui/sun.svg"></a>
 	</div>
 
 	<div class="nav-list">
-		<img src="./files/images/ui/menu.png">
+		<img src="/files/images/ui/menu.png">
 		<div class="list">
 			<div class="list-title">shortcuts</div>
 			<a class="list-item" href="#">item</a>
@@ -39,7 +39,7 @@
 	<div class="landing-page" tabindex="1" >
 		<div class="main-title">template page</div>
 		<a tabindex="-1" href="#" class="down">
-			<img src="./files/images/ui/down.png" alt="down">
+			<img src="/files/images/ui/down.png" alt="down">
 		</a>
 	</div>
 
@@ -54,7 +54,7 @@
 
 	<div class="image-page" tabindex="3" >
 		<div class="image-container">
-			<img src="./files/images/image.jpg" />
+			<img src="/files/images/image.jpg" />
 		</div>
 	</div>
 
@@ -62,23 +62,23 @@
 		<div class="gallery-container">
 			<div class="gallery-title">gallery</div>
 			<div class="gallery">
-				<a class="gallery-item" href="./files/images/image.jpg" target="_blank" tabindex="-1" >
-					<img src="./files/images/image.jpg" alt="chimken">
+				<a class="gallery-item" href="/files/images/image.jpg" target="_blank" tabindex="-1" >
+					<img src="/files/images/image.jpg" alt="chimken">
 				</a>
-				<a class="gallery-item" href="./files/images/image.jpg" target="_blank" tabindex="-1" >
-					<img src="./files/images/image.jpg" alt="chimken">
+				<a class="gallery-item" href="/files/images/image.jpg" target="_blank" tabindex="-1" >
+					<img src="/files/images/image.jpg" alt="chimken">
 				</a>
-				<a class="gallery-item" href="./files/images/image.jpg" target="_blank" tabindex="-1" >
-					<img src="./files/images/image.jpg" alt="chimken">
+				<a class="gallery-item" href="/files/images/image.jpg" target="_blank" tabindex="-1" >
+					<img src="/files/images/image.jpg" alt="chimken">
 				</a>
-				<a class="gallery-item" href="./files/images/image.jpg" target="_blank" tabindex="-1" >
-					<img src="./files/images/image.jpg" alt="chimken">
+				<a class="gallery-item" href="/files/images/image.jpg" target="_blank" tabindex="-1" >
+					<img src="/files/images/image.jpg" alt="chimken">
 				</a>
-				<a class="gallery-item" href="./files/images/image.jpg" target="_blank" tabindex="-1" >
-					<img src="./files/images/image.jpg" alt="chimken">
+				<a class="gallery-item" href="/files/images/image.jpg" target="_blank" tabindex="-1" >
+					<img src="/files/images/image.jpg" alt="chimken">
 				</a>
-				<a class="gallery-item" href="./files/images/image.jpg" target="_blank" tabindex="-1" >
-					<img src="./files/images/image.jpg" alt="chimken">
+				<a class="gallery-item" href="/files/images/image.jpg" target="_blank" tabindex="-1" >
+					<img src="/files/images/image.jpg" alt="chimken">
 				</a>
 			</div>
 		</div>
@@ -90,7 +90,7 @@
 			<div class="four-celled">
 				<a href="#" tabindex="-1" class="four-celled-cell">
 					<div class="four-celled-cell-image">
-						<img src="./files/images/image.jpg" alt="img" />
+						<img src="/files/images/image.jpg" alt="img" />
 					</div>
 					<div class="four-celled-cell-title">sub-title</div>
 					<div class="four-celled-cell-details">
@@ -99,7 +99,7 @@
 				</a>
 				<a href="#" tabindex="-1" class="four-celled-cell">
 					<div class="four-celled-cell-image">
-						<img src="./files/images/image.jpg" alt="img" />
+						<img src="/files/images/image.jpg" alt="img" />
 					</div>
 					<div class="four-celled-cell-title">sub-title</div>
 					<div class="four-celled-cell-details">
@@ -108,7 +108,7 @@
 				</a>
 				<a href="#" tabindex="-1" class="four-celled-cell">
 					<div class="four-celled-cell-image">
-						<img src="./files/images/image.jpg" alt="img" />
+						<img src="/files/images/image.jpg" alt="img" />
 					</div>
 					<div class="four-celled-cell-title">sub-title</div>
 					<div class="four-celled-cell-details">
@@ -117,7 +117,7 @@
 				</a>
 				<a href="#" tabindex="-1" class="four-celled-cell">
 					<div class="four-celled-cell-image">
-						<img src="./files/images/image.jpg" alt="img" />
+						<img src="/files/images/image.jpg" alt="img" />
 					</div>
 					<div class="four-celled-cell-title">sub-title</div>
 					<div class="four-celled-cell-details">
@@ -138,7 +138,7 @@
 								sub-title
 							</div>
 							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="./files/images/image.jpg" alt="image" />
+								<img class="six-celled-cell-image" src="/files/images/image.jpg" alt="image" />
 							</div>
 						</a>
 						<a tabindex="-1" href="#" class="six-celled-cell">
@@ -146,7 +146,7 @@
 								sub-title
 							</div>
 							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="./files/images/image.jpg" alt="image" />
+								<img class="six-celled-cell-image" src="/files/images/image.jpg" alt="image" />
 							</div>
 						</a>
 						<a tabindex="-1" href="#" class="six-celled-cell">
@@ -154,7 +154,7 @@
 								sub-title
 							</div>
 							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="./files/images/image.jpg" alt="image" />
+								<img class="six-celled-cell-image" src="/files/images/image.jpg" alt="image" />
 							</div>
 						</a>
 						<a tabindex="-1" href="#" class="six-celled-cell">
@@ -162,7 +162,7 @@
 								sub-title
 							</div>
 							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="./files/images/image.jpg" alt="image" />
+								<img class="six-celled-cell-image" src="/files/images/image.jpg" alt="image" />
 							</div>
 						</a>
 						<a tabindex="-1" href="#" class="six-celled-cell">
@@ -170,7 +170,7 @@
 								sub-title
 							</div>
 							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="./files/images/image.jpg" alt="image" />
+								<img class="six-celled-cell-image" src="/files/images/image.jpg" alt="image" />
 							</div>
 						</a>
 						<a tabindex="-1" class="six-celled-cell">
@@ -178,7 +178,7 @@
 								sub-title
 							</div>
 							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="./files/images/image.jpg" alt="image" />
+								<img class="six-celled-cell-image" src="/files/images/image.jpg" alt="image" />
 							</div>
 						</a>
 				</div>
