--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <head>
-	<link rel="stylesheet" href="/files/styles/style.css">
-	<link rel="icon" type="image/x-icon" href="/files/images/ui/9.png" />
+	<link rel="stylesheet" href="./files/styles/style.css">
+	<link rel="icon" type="image/x-icon" href="./files/images/ui/9.png" />
 	<title>9EED's website</title>
 	<meta charset="UTF-8" />
 	<meta name="description" content="9EED's professional personal website">
 	<meta name="author" content="9EED" />
-	<meta property="og:image" content="/files/images/9.png" />
-	<script defer src="/files/scripts/script.js"></script>
-	<script defer src="/files/scripts/switch.js"></script>
+	<meta property="og:image" content="./files/images/9.png" />
+	<script defer src="./files/scripts/script.js"></script>
+	<script defer src="./files/scripts/switch.js"></script>
 </head>
 <body>
 
@@ -17,14 +17,14 @@
 	</div>
 
 	<div class="nav-bar">
-		<a class="nav-bar-item" href="/index.html#landing-page">HOME</a>
-		<a class="nav-bar-item" href="/index.html#projects">PROJECTS</a>
-		<a class="nav-bar-item" href="/index.html#contacts">CONTACTS</a>
-		<a class="nav-bar-item" id="mode-switch"><img src="/files/images/ui/sun.svg"></a>
+		<a class="nav-bar-item" href="./index.html#landing-page">HOME</a>
+		<a class="nav-bar-item" href="./index.html#projects">PROJECTS</a>
+		<a class="nav-bar-item" href="./index.html#contacts">CONTACTS</a>
+		<a class="nav-bar-item" id="mode-switch"><img src="./files/images/ui/sun.svg"></a>
 	</div>
 
 	<div class="nav-list">
-		<img src="/files/images/ui/menu.png">
+		<img src="./files/images/ui/menu.png">
 		<div class="list">
 			<div class="list-title">shortcuts</div>
 			<a class="list-item" href="#landing-page">landing page</a>
@@ -39,7 +39,7 @@
 	<div class="landing-page" id="landing-page" tabindex="1" >
 		<div class="main-title">9EED's website</div>
 		<a tabindex="-1" href="#about-me" class="down">
-			<img src="/files/images/ui/down.png" alt="down">
+			<img src="./files/images/ui/down.png" alt="down">
 		</a>
 	</div>
 
@@ -58,7 +58,7 @@
 			<div class="four-celled">
 				<a href="https://github.com/9EED" target="_blank" tabindex="-1" class="four-celled-cell">
 					<div class="four-celled-cell-image">
-						<img src="/files/images/skills/web.png">
+						<img src="./files/images/skills/web.png">
 					</div>
 					<div class="four-celled-cell-title">Web Dev</div>
 					<div class="four-celled-cell-details">
@@ -67,7 +67,7 @@
 				</a>
 				<a href="https://github.com/9EED" target="_blank" tabindex="-1" class="four-celled-cell">
 					<div class="four-celled-cell-image">
-						<img src="/files/images/skills/bug.png">
+						<img src="./files/images/skills/bug.png">
 					</div>
 					<div class="four-celled-cell-title">Code</div>
 					<div class="four-celled-cell-details">
@@ -76,16 +76,16 @@
 				</a>
 				<a href="#" tabindex="-1" class="four-celled-cell">
 					<div class="four-celled-cell-image">
-						<img src="/files/images/skills/drawing.png">
+						<img src="./files/images/skills/drawing.png">
 					</div>
 					<div class="four-celled-cell-title">Drawing</div>
 					<div class="four-celled-cell-details">
 						pencil and pen drawings on paper
 					</div>
 				</a>
-				<a href="/files/pages/3D.html" tabindex="-1" class="four-celled-cell">
+				<a href="./files/pages/3D.html" tabindex="-1" class="four-celled-cell">
 					<div class="four-celled-cell-image">
-						<img src="/files/images/skills/3d.png">
+						<img src="./files/images/skills/3d.png">
 					</div>
 					<div class="four-celled-cell-title">3D Animation</div>
 					<div class="four-celled-cell-details">
@@ -106,7 +106,7 @@
 								chess 2.0
 							</div>
 							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="/files/images/projects/chess 2.0.png" alt="chess 2.0" />
+								<img class="six-celled-cell-image" src="./files/images/projects/chess 2.0.png" alt="chess 2.0" />
 							</div>
 						</a>
 						<a tabindex="-1" href="https://9EED.github.io/conways-game-of-life" target="_blank" class="six-celled-cell">
@@ -114,7 +114,7 @@
 								conway's game of life
 							</div>
 							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="/files/images/projects/conways-game-of-life.jpg" alt="conways-game-of-life" />
+								<img class="six-celled-cell-image" src="./files/images/projects/conways-game-of-life.jpg" alt="conways-game-of-life" />
 							</div>
 						</a>
 						<a tabindex="-1" href="https://github.com/9EED/2D-gravity" target="_blank" class="six-celled-cell">
@@ -122,7 +122,7 @@
 								2D gravity simulator
 							</div>
 							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="/files/images/projects/2D gravity.png" alt="2D gravity simulator" />
+								<img class="six-celled-cell-image" src="./files/images/projects/2D gravity.png" alt="2D gravity simulator" />
 							</div>
 						</a>
 						<a tabindex="-1" href="https://github.com/9EED/interactive-mandelbrot-shader" target="_blank" class="six-celled-cell">
@@ -130,7 +130,7 @@
 								interactive mandelbrot shader
 							</div>
 							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="/files/images/projects/mandel.png" alt="interactive mandelbrot fractal" />
+								<img class="six-celled-cell-image" src="./files/images/projects/mandel.png" alt="interactive mandelbrot fractal" />
 							</div>
 						</a>
 						<a tabindex="-1" href="https://9EED.github.io/9EED" target="_blank" class="six-celled-cell">
@@ -138,7 +138,7 @@
 								9EED's website
 							</div>
 							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="/files/images/projects/9EED's-website.jpg" alt="9EED's website" />
+								<img class="six-celled-cell-image" src="./files/images/projects/9EED's-website.jpg" alt="9EED's website" />
 							</div>
 						</a>
 						<a tabindex="-1" href="https://9eed.github.io/super-box/" target="_blank" class="six-celled-cell">
@@ -146,7 +146,7 @@
 								super-box
 							</div>
 							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="/files/images/projects/super-box.PNG" alt="super-box" />
+								<img class="six-celled-cell-image" src="./files/images/projects/super-box.PNG" alt="super-box" />
 							</div>
 						</a>
 				</div>
@@ -160,7 +160,7 @@
 			<div class="four-celled">
 				<a tabindex="-1" class="four-celled-cell" href="mailto:zeghdns@gmail.com" >
 					<div class="four-celled-cell-image">
-						<img src="/files/images/contacts/email.png" alt="email">
+						<img src="./files/images/contacts/email.png" alt="email">
 					</div>
 					<div class="four-celled-cell-title">email</div>
 					<div class="four-celled-cell-details">
@@ -169,7 +169,7 @@
 				</a>
 				<a tabindex="-1" class="four-celled-cell" href="https://discord.com/app" target="_blank">
 					<div class="four-celled-cell-image">
-						<img src="/files/images/contacts/discord.png" alt="discord">
+						<img src="./files/images/contacts/discord.png" alt="discord">
 					</div>
 					<div class="four-celled-cell-title">discord</div>
 					<div class="four-celled-cell-details">
@@ -178,7 +178,7 @@
 				</a>				
 				<a tabindex="-1" class="four-celled-cell" href="https://github.com/9EED" target="_blank">
 					<div class="four-celled-cell-image">
-						<img src="/files/images/contacts/github.png" alt="github">
+						<img src="./files/images/contacts/github.png" alt="github">
 					</div>
 					<div class="four-celled-cell-title">github</div>
 					<div class="four-celled-cell-details">
@@ -187,7 +187,7 @@
 				</a>
 				<a tabindex="-1" class="four-celled-cell" href="https://www.instagram.com/salah.zeghdani/" target="_blank">
 					<div class="four-celled-cell-image">
-						<img src="/files/images/contacts/instagram.png" alt="instagram">
+						<img src="./files/images/contacts/instagram.png" alt="instagram">
 					</div>
 					<div class="four-celled-cell-title">instagram</div>
 					<div class="four-celled-cell-details">
