--- a/files/pages/3D.html
+++ b/files/pages/3D.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <head>
-	<link rel="stylesheet" href="/files/styles/style.css">
-	<link rel="icon" type="image/x-icon" href="/files/images/ui/9.png" />
+	<link rel="stylesheet" href="/9EED/files/styles/style.css">
+	<link rel="icon" type="image/x-icon" href="/9EED/files/images/ui/9.png" />
 	<title>9EED's website(WIP)</title>
 	<meta charset="UTF-8" />
 	<meta name="description" content="9EED's profesonl personal website">
 	<meta name="author" content="9EED" />
-	<meta property="og:image" content="/files/images/9.png" />
-	<script defer src="/files/scripts/script.js"></script>
-	<script defer src="/files/scripts/switch.js"></script>
+	<meta property="og:image" content="/9EED/files/images/9.png" />
+	<script defer src="/9EED/files/scripts/script.js"></script>
+	<script defer src="/9EED/files/scripts/switch.js"></script>
 </head>
 <body>
 
@@ -18,13 +18,13 @@
 
 	<div class="nav-bar">
 		<a class="nav-bar-item" href="/index.html#landing-page">HOME</a>
-		<a class="nav-bar-item" href="/files/pages/3D.html#gallery">GALLERY</a>
+		<a class="nav-bar-item" href="/9EED/files/pages/3D.html#gallery">GALLERY</a>
 		<a class="nav-bar-item" href="/index.html#contacts">CONTACTS</a>
-		<a class="nav-bar-item" id="mode-switch"><img src="/files/images/ui/sun.svg"></a>
+		<a class="nav-bar-item" id="mode-switch"><img src="/9EED/files/images/ui/sun.svg"></a>
 	</div>
 
 	<div class="nav-list">
-		<img src="/files/images/ui/menu.png">
+		<img src="/9EED/files/images/ui/menu.png">
 		<div class="list">
 			<div class="list-title">shortcuts</div>
 			<a class="list-item" href="#paragraph">paragraph</a>
@@ -35,7 +35,7 @@
 	<div class="landing-page" tabindex="1" >
 		<div class="main-title">3D animation</div>
 		<a tabindex="-1" href="#gallery" class="down">
-			<img src="/files/images/ui/down.png" alt="down">
+			<img src="/9EED/files/images/ui/down.png" alt="down">
 		</a>
 	</div>
 
@@ -52,29 +52,29 @@
 			<div class="gallery-title">gallery</div>
 			<div class="gallery">
 				
-				<a class="gallery-item" href="/files/images/3D/apple.png" target="_blank" tabindex="-1" >
-					<img src="/files/images/3D/apple.png" alt="low poly apple">
+				<a class="gallery-item" href="/9EED/files/images/3D/apple.png" target="_blank" tabindex="-1" >
+					<img src="/9EED/files/images/3D/apple.png" alt="low poly apple">
 				</a>
-				<a class="gallery-item" href="/files/images/3D/abbxx.png" target="_blank" tabindex="-1" >
-					<img src="/files/images/3D/abbxx.png" alt="minecraft render for a friend">
+				<a class="gallery-item" href="/9EED/files/images/3D/abbxx.png" target="_blank" tabindex="-1" >
+					<img src="/9EED/files/images/3D/abbxx.png" alt="minecraft render for a friend">
 				</a>
-				<a class="gallery-item" href="/files/images/3D/drama.png" target="_blank" tabindex="-1" >
-					<img src="/files/images/3D/drama.png" alt="draumatic shot of a glass and a flower">
+				<a class="gallery-item" href="/9EED/files/images/3D/drama.png" target="_blank" tabindex="-1" >
+					<img src="/9EED/files/images/3D/drama.png" alt="draumatic shot of a glass and a flower">
 				</a>
-				<a class="gallery-item" href="/files/images/3D/kiwi.png" target="_blank" tabindex="-1" >
-					<img src="/files/images/3D/kiwi.png" alt="minecrafty kiwi birds">
+				<a class="gallery-item" href="/9EED/files/images/3D/kiwi.png" target="_blank" tabindex="-1" >
+					<img src="/9EED/files/images/3D/kiwi.png" alt="minecrafty kiwi birds">
 				</a>
-				<a class="gallery-item" href="/files/images/3D/owl.png" target="_blank" tabindex="-1" >
-					<img src="/files/images/3D/owl.png" alt="minecrafty owl">
+				<a class="gallery-item" href="/9EED/files/images/3D/owl.png" target="_blank" tabindex="-1" >
+					<img src="/9EED/files/images/3D/owl.png" alt="minecrafty owl">
 				</a>
-				<a class="gallery-item" href="/files/images/3D/magicgum.png" target="_blank" tabindex="-1" >
-					<img src="/files/images/3D/magicgum.png" alt="fan art of the minecraft youtuber magicgum">
+				<a class="gallery-item" href="/9EED/files/images/3D/magicgum.png" target="_blank" tabindex="-1" >
+					<img src="/9EED/files/images/3D/magicgum.png" alt="fan art of the minecraft youtuber magicgum">
 				</a>
-				<a class="gallery-item" href="/files/images/3D/siren head.png" target="_blank" tabindex="-1" >
-					<img src="/files/images/3D/siren head.png" alt="siren head">
+				<a class="gallery-item" href="/9EED/files/images/3D/siren head.png" target="_blank" tabindex="-1" >
+					<img src="/9EED/files/images/3D/siren head.png" alt="siren head">
 				</a>
-				<a class="gallery-item" href="/files/images/3D/flesh texture.png" target="_blank" tabindex="-1" >
-					<img src="/files/images/3D/flesh texture.png" alt="procedural flesh texture">
+				<a class="gallery-item" href="/9EED/files/images/3D/flesh texture.png" target="_blank" tabindex="-1" >
+					<img src="/9EED/files/images/3D/flesh texture.png" alt="procedural flesh texture">
 				</a>
 			</div>
 		</div>
