--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
 				<div class="six-celled">
 					<div class="six-celled-title">latest projects</div>
 					<div class="six-celled-grid">
+						<a tabindex="-1" href="https://github.com/9EED/2D-gravity" target="_blank" class="six-celled-cell">
+							<div class="six-celled-cell-title">
+								2D gravity simulator
+							</div>
+							<div class="six-celled-cell-image-holder" >
+								<img class="six-celled-cell-image" src="/9EED/files/images/projects/2D gravity.png" alt="2D gravity simulator" />
+							</div>
+						</a>
 						<a tabindex="-1" href="https://9eed.github.io/chess-2.0/" target="_blank" class="six-celled-cell">
 							<div class="six-celled-cell-title">
 								chess 2.0
@@ -109,20 +117,12 @@
 								<img class="six-celled-cell-image" src="/9EED/files/images/projects/chess 2.0.png" alt="chess 2.0" />
 							</div>
 						</a>
-						<a tabindex="-1" href="https://9EED.github.io/conways-game-of-life" target="_blank" class="six-celled-cell">
+						<a tabindex="-1" href="https://github.com/9EED/superbox-3.0" target="_blank" class="six-celled-cell">
 							<div class="six-celled-cell-title">
-								conway's game of life
+								super-box 3.0
 							</div>
 							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="/9EED/files/images/projects/conways-game-of-life.jpg" alt="conways-game-of-life" />
-							</div>
-						</a>
-						<a tabindex="-1" href="https://github.com/9EED/2D-gravity" target="_blank" class="six-celled-cell">
-							<div class="six-celled-cell-title">
-								2D gravity simulator
-							</div>
-							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="/9EED/files/images/projects/2D gravity.png" alt="2D gravity simulator" />
+								<img class="six-celled-cell-image" src="/9EED/files/images/projects/super-box3.0.png" alt="super-box 3.0" />
 							</div>
 						</a>
 						<a tabindex="-1" href="https://github.com/9EED/interactive-mandelbrot-shader" target="_blank" class="six-celled-cell">
