--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 								<img class="six-celled-cell-image" src="./files/images/projects/chess 2.0.png" alt="chess 2.0" />
 							</div>
 						</a>
-						<a tabindex="-1" href="https://github.com./superbox-3.0" target="_blank" class="six-celled-cell">
+						<a tabindex="-1" href="https://github.com/9EED/superbox-3.0" target="_blank" class="six-celled-cell">
 							<div class="six-celled-cell-title">
 								super-box 3.0
 							</div>
