--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				<div class="six-celled">
 					<div class="six-celled-title">latest projects</div>
 					<div class="six-celled-grid">
-						<a tabindex="-1" href="https://github.com./2D-gravity" target="_blank" class="six-celled-cell">
+						<a tabindex="-1" href="https://github.com/9EED/2D-gravity" target="_blank" class="six-celled-cell">
 							<div class="six-celled-cell-title">
 								2D gravity simulator
 							</div>
@@ -125,7 +125,7 @@
 								<img class="six-celled-cell-image" src="./files/images/projects/super-box3.0.png" alt="super-box 3.0" />
 							</div>
 						</a>
-						<a tabindex="-1" href="https://github.com./interactive-mandelbrot-shader" target="_blank" class="six-celled-cell">
+						<a tabindex="-1" href="https://github.com/9EED/interactive-mandelbrot-shader" target="_blank" class="six-celled-cell">
 							<div class="six-celled-cell-title">
 								interactive mandelbrot shader
 							</div>
@@ -133,7 +133,7 @@
 								<img class="six-celled-cell-image" src="./files/images/projects/mandel.png" alt="interactive mandelbrot fractal" />
 							</div>
 						</a>
-						<a tabindex="-1" href="https://9EED.github.io/9EED" target="_blank" class="six-celled-cell">
+						<a tabindex="-1" href="https://9EED.github.io" target="_blank" class="six-celled-cell">
 							<div class="six-celled-cell-title">
 								9EED's website
 							</div>
