fixed the links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="author" content="9EED" />
 	<meta property="og:image" content="./files/images/9.png" />
 	<script defer src="./files/scripts/script.js"></script>
-	<script defer src="./files/scripts/switch.js"></script>
+	<script defer src="./files/scripts/style.js"></script>
 </head>
 <body>
 
