--- a/files/pages/3D.html
+++ b/files/pages/3D.html
@@ -17,9 +17,9 @@
     </div>
 
 	<div class="nav-bar">
-		<a class="nav-bar-item" href="./index.html#landing-page">HOME</a>
+		<a class="nav-bar-item" href="/index.html#landing-page">HOME</a>
 		<a class="nav-bar-item" href="/files/pages/3D.html#gallery">GALLERY</a>
-		<a class="nav-bar-item" href="./index.html#contacts">CONTACTS</a>
+		<a class="nav-bar-item" href="/index.html#contacts">CONTACTS</a>
 		<a class="nav-bar-item" id="mode-switch"><img src="/files/images/ui/sun.svg"></a>
 	</div>
 
