--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
 							<div class="six-celled-cell-title">
 								9EED's website
 							</div>
-							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="./files/images/projects/9EED's-website.jpg" alt="9EED's website" />
+							<div class="six-celled-cell-iframe-holder" >
+								<iframe src="./index.html" frameborder="0" class="frame"></iframe>
 							</div>
 						</a>
 						<a tabindex="-1" href="https://9eed.github.io/super-box/" target="_blank" class="six-celled-cell">
