--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<div class="paragraph-container">
 			<div class="paragraph-title">about me</div>
 			<div class="paragraph">
-				Hello, I am 9EED (pronunced Nined). I'm a web developer, an artist and, a high-school student from Algeria.
+				Hello, I am 9EED (pronunced Nined). I'm a programmer, an artist and, a high-school student from Algeria.
 			</div>
 		</div>
 	</div>
