--- a/index.html
+++ b/index.html
@@ -133,14 +133,6 @@
 								<img class="six-celled-cell-image" src="./files/images/projects/mandel.png" alt="interactive mandelbrot fractal" />
 							</div>
 						</a>
-						<a tabindex="-1" href="https://9EED.github.io" target="_blank" class="six-celled-cell">
-							<div class="six-celled-cell-title">
-								9EED's website
-							</div>
-							<div class="six-celled-cell-iframe-holder" >
-								<iframe src="./index.html" frameborder="0" class="frame"></iframe>
-							</div>
-						</a>
 						<a tabindex="-1" href="https://9eed.github.io/super-box/" target="_blank" class="six-celled-cell">
 							<div class="six-celled-cell-title">
 								super-box
@@ -148,6 +140,9 @@
 							<div class="six-celled-cell-image-holder" >
 								<img class="six-celled-cell-image" src="./files/images/projects/super-box.PNG" alt="super-box" />
 							</div>
+						</a>
+						<a tabindex="-1" href="https://9EED.github.io/projects" target="_blank" class="six-celled-cell" id="all">
+							more >
 						</a>
 				</div>
 			</div>
